2015-12-12  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in (parse_or_die): Add --preset argument.
	Current presets: parallella16, parallella64, and parallella1k.

2015-12-12  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in (run_inferior): Handle host binary failure
	more gracefully.

2015-12-12  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in (main): Call run_inferior or run_standalone
	depending on if host flag is set.
	(run_inferior): Factor out from main. Kill simulator processes when
	host application exits.
	(run_standalone): Factor out from main.

2015-12-12  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_wait_run): Let process that created shm file
	wake up client(s).

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Fix exception when checking if host argument
	is present.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Add --host flag.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Add --external-fetch flag.

2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_cpu_reset): Don't reset H_REG_MESH_COREID.

2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_hw_event_callback): Use
	es_send_interrupt () to raise interrupt on remote core in dma message
	mode.
	* esim/esim.c (es_send_interrupt): Implemented.
	* esim/esim.h (es_send_interrupt): Add function prototype.

2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_set_simcmd): Implemented. Writing a 'one'
	to the register will stop the simulation.
	* epiphany-sim.h (epiphanybf_set_simcmd): Add function prototype.
	* esim/esim.c (es_client_stop_cores): Implemented.
	(es_client_disconnect): Add stop parameter.
	* esim/esim.h (es_client_disconnect): Update function prototype.

2015-12-07  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (AS_FOR_TARGET): Don't use in-build-tree host
	assembler when building a Canadian cross.
